[tool.poetry]
name = "orbconformal"
version = "0.0.1"
description = "A Conformal Prediction based on Simulation models for ORB functions (for Tropical Cylones)"
authors = ["Benjamin LeRoy"]
license = "MIT"
readme = "README.md"
documentation = ""
homepage = "https://github.com/benjaminleroy/orb-tc-conformal"
repository = "https://github.com/benjaminleroy/orb-tc-conformal"
include = ["data/AL112005_size.csv"]

[tool.poetry.dependencies]
python = "^3.7.1"
numpy = "^1.21.1"
progressbar = "^2.5"
joblib = "^1.0.1"
networkx = "^2.6.2"
pandas = "^1.3.1"
plotly = "^5.1.0"
pytest = "^6.2.4"
torch = "^1.9.1"

[tool.poetry.dev-dependencies]
sphinx-rtd-theme = "^0.5.2"
Sphinx = "^4.1.2"
nbsphinx = "^0.8.6"
ipykernel = "^6.0.3"
sphinx-autoapi = "^1.8.3"
sphinxcontrib-napoleon = "^0.7"
pytest-cov = "^2.12.1"
typing-extensions = "^3.10.0"
notebook = "^6.4.3"
seaborn = "^0.11.2"
scikit-learn = "^0.24.2"


[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
